# modern-di-pytest

./: CLAUDE.md  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
architecture/: README.md
docs/adr/: 0001-expose-installs-into-modules-only.md
modern_di_pytest/: __init__.py  factory.py
planning/: README.md  deferred.md
planning/decisions/: 2026-06-26-expose-installs-into-modules-only.md
planning/releases/: 2.0.2.md  2.0.3.md  2.1.0.md  3.0.0.md
tests/: conftest.py  sample.py  test_collect_fixtures.py  test_expose.py  test_expose_explicit_module.py  test_expose_multiple_groups.py  test_expose_request_scope.py  test_modern_di_fixture.py
