[project]
name = "modern-di-pytest"
description = "Pytest integration for modern-di — turn DI dependencies into fixtures"
authors = [{ name = "Artur Shiriev", email = "me@shiriev.ru" }]
requires-python = ">=3.10,<4"
license = "MIT"
readme = "README.md"
keywords = ["dependency-injection", "di", "ioc-container", "modern-di", "pytest", "fixtures", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
]
dependencies = ["modern-di>=2.16.1,<3", "pytest>=7"]
version = "0"

[project.urls]
Homepage = "https://modern-di.modern-python.org"
Documentation = "https://modern-di.modern-python.org"
Repository = "https://github.com/modern-python/modern-di-pytest"
Issues = "https://github.com/modern-python/modern-di-pytest/issues"
Changelog = "https://github.com/modern-python/modern-di-pytest/releases"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]
lint = [
    "ty",
    "ruff",
    "eof-fixer",
    "typing-extensions",
]

[build-system]
requires = ["uv_build>=0.11,<1.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "modern_di_pytest"
module-root = ""

[tool.ruff]
fix = false
unsafe-fixes = true
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
    "S101",
    "TCH",
    "FBT",
    "D203",
    "D213",
    "COM812",
    "ISC001",
    "G004",
]
isort.lines-after-imports = 2
isort.no-lines-before = ["standard-library", "local-folder"]

[tool.pytest.ini_options]
addopts = ""

[tool.coverage.report]
exclude_also = [
    "if typing.TYPE_CHECKING:",
]
